--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.16",
-    "@mantine/hooks": "^6.0.16"
+    "@mantine/hooks": "^6.0.16",
+    "react-markdown": "^8.0.7"
   }
 }
