--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# DATABASE_URL=file:./dev.db
+# DATABASE_URL=postgresql://postgres@localhost:5432/redwoodblog_dev?connection_limit=1
 # TEST_DATABASE_URL=file:./.redwood/test.db
 # PRISMA_HIDE_UPDATE_MESSAGE=true
 # LOG_LEVEL=trace
